data/derived/sp14/progs/unify/prog0959.ml.out
Characters 141-160:
  | _ -> ((z/10),[z mod 10])in
         ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
